@@ -276,7 +276,7 @@ int pbs_disconnect_socket(int sock)
   exit(1);
   }
 
-int add_network_entry(mom_hierarchy_t *mh, char *name, struct addrinfo *ai, unsigned short rm_port, unsigned short service_port, int path, int level)
+int add_network_entry(mom_hierarchy_t *mh, char *name, struct addrinfo *ai, unsigned short rm_port, int path, int level)
   {
   fprintf(stderr, "The call to add_network_entry needs to be mocked!!\n");
   exit(1);
