@@ -6,6 +6,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - fix so comma separated file list can be used with qsub -W stagein/stageout.
       Matches qsub documentation again.
   b - Only seed the random number generator once
+  b - if using a default hierarchy and moms on non-default ports, pass that information
+      along in the hierarchy
 
 4.0.0
   e - make a threadpool for TORQUE server. The number of threads is 
